{
    "name": "PlayerInputControls",
    "maps": [
        {
            "name": "CityViewActions",
            "id": "39a4eb75-9a9b-4bc6-ae70-6904f883a232",
            "actions": [
                {
                    "name": "MoveCityCamera",
                    "type": "Value",
                    "id": "dbaddbf6-87ba-4893-b9ac-593bebbf6269",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCityCamera",
                    "type": "Value",
                    "id": "c60c0b8b-8956-46c4-97fb-e9ba2fa3cc93",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomCityCamera",
                    "type": "Value",
                    "id": "07916658-8f89-416d-a5f7-78ebbd45666d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FocusOnLocation",
                    "type": "Button",
                    "id": "01334cec-fc52-479e-bf1b-54b3149bd8b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectLocation",
                    "type": "Button",
                    "id": "3efd7cbb-8f63-481d-99bc-8f7408f3b5d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractWithLocation",
                    "type": "Button",
                    "id": "ef9f6df6-2c71-4ee1-9f7b-8f82d2288fa6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRotation",
                    "type": "Button",
                    "id": "cf29adda-0160-4b2c-986f-21f816488dae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauzeGame",
                    "type": "Button",
                    "id": "26b283a2-450b-452f-ab34-a24344f612b6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ResumeGameNormalSpeed",
                    "type": "Button",
                    "id": "ab5cec8e-075a-435b-8c80-33dc0c04b2d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResumeGameHighSpeed",
                    "type": "Button",
                    "id": "d5227bd8-41ad-4025-bebb-025266988005",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "748ad95d-a515-4845-a596-00c56d743420",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCityCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8f6c49b9-9f80-4ee6-8656-418f49e6c83d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6de116b0-8bcd-413a-9e21-bb9573c06762",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b14db454-9f23-41f3-9946-6bfd09e4357e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7754c158-05aa-457e-8bfc-440b1e11ee76",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "45d1ac6d-0c39-4513-9726-7eed5221803b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3bde4498-05f2-46bf-b189-c0c5e9dd921b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCityCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "73614ed1-eeaf-41da-bbcb-32fb29771296",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6cdadba0-8fa2-4bab-be9b-b0894055d867",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90f72179-98d6-4668-b0ad-7084ee7aead0",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCityCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06258310-94ef-4748-aea7-4323497b999b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap(tapDelay=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5398b213-4c4f-4618-9e83-ae962a6c943a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e343941-8387-4505-addf-98fe92f0c920",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "InteractWithLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24364eee-1dc8-4856-9721-e911ceadb184",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ec7371e-871b-46ab-9424-69bec6cf7961",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3f61112-1b39-492e-a4bd-9577c0048c55",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b685614-eaba-4eab-a66b-c0b02547b4b2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauzeGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0df818a-4297-49ff-b987-d066c2d17756",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResumeGameNormalSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6c1c163-3365-440a-9ba7-7254e58a0470",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResumeGameHighSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}